fixed alignment for mobile devices

--- a/eyestylesheet.css
+++ b/eyestylesheet.css
@@ -25,19 +25,19 @@ body {
     position: absolute;
     width: 50px;
     height: 50px;
-    scale: 3;
+    scale: 2.5;
 
 }
 
 .eye-left {
-    left: -18px;
-    top: -40px;
+    left: -13px;
+    top: -45px;
 
 }
 
 .eye-right {
-    right: -66px;
-    top: -40px;
+    right: -43px;
+    top: -45px;
 }
 
 .eye-socket img {
@@ -47,5 +47,5 @@ body {
 }
 
 #outer{
-    scale: 3;
+    scale: 2.5;
 }
