--- a/main.css
+++ b/main.css
@@ -344,7 +344,7 @@ main{
             background-color: black;
             border-radius: 1em;
             height: 435px;
-            width: 350px;
+            width: 300px;
             max-width: 100%;
             justify-content: center;
             align-items: center;
@@ -372,6 +372,7 @@ main{
                 grid-template-columns: 1fr;
                 align-items: center;
                 padding: 20px;
+                width: 100%;
 
                 .inside-projectCard-header{
                     display: flex;
@@ -381,7 +382,7 @@ main{
 
                     .githubLogo-in-projectCard{
                         position: absolute;
-                        right: 10%;
+                        right: 15%;
                         top: 15px;
 
                         &:hover{
@@ -458,6 +459,7 @@ main{
             gap: 1em;
             align-items: center;
             padding: 2em;
+            width: 240px;
 
             border-radius: 1em;
             box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
